--- a/AnkiDroid/src/main/res/values-cs/01-core.xml
+++ b/AnkiDroid/src/main/res/values-cs/01-core.xml
@@ -79,8 +79,8 @@
         <item quantity="many">Zbývá %d dne %d</item>
         <item quantity="other">Zbývá %d dní %d</item>
     </plurals>
-    <string name="no_cards_placeholder_title">Collection is empty</string>
-    <string name="no_cards_placeholder_description">Start adding cards\nusing the + icon.</string>
+    <string name="no_cards_placeholder_title">Kolekce je prázdná</string>
+    <string name="no_cards_placeholder_description">Začněte přidávat karty\npoužitím ikony +.</string>
     <!-- The deck picker via AnkiStatsTaskHandler.java -->
     <plurals name="studied_cards_today">
         <item quantity="one">Dnes studována %1$d karta během %2$s</item>
